adding Number Picker license

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -452,4 +452,5 @@
     <string name="espresso_title">Espresso (Test-Hilfstool)</string>
     <string name="gson_title">Gson (JSON-Parser)</string>
     <string name="leak_canary_title">Leak Canary (Memory-Leak-Detektor)</string>
+    <string name="number_picker_title">Number Picker (customizable number picker)</string>
 </resources>
