--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -463,4 +463,5 @@
     <string name="espresso_title">Espresso (testowanie aplikacji)</string>
     <string name="gson_title">Gson (parser JSON)</string>
     <string name="leak_canary_title">Leak Canary (wykrywanie wycieków pamięci)</string>
+    <string name="number_picker_title">Number Picker (customizable number picker)</string>
 </resources>
