--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -453,4 +453,5 @@
     <string name="espresso_title">Espresso (apoio aos testes)</string>
     <string name="gson_title">Gson (processador JSON)</string>
     <string name="leak_canary_title">Leak Canary (detetor de falhas de memória)</string>
+    <string name="number_picker_title">Number Picker (customizable number picker)</string>
 </resources>
