--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -453,4 +453,5 @@
     <string name="espresso_title">Espresso (testhjälpklass)</string>
     <string name="gson_title">Gson (JSON-parser)</string>
     <string name="leak_canary_title">Leak Canary (minnesläckagedetektor)</string>
+    <string name="number_picker_title">Number Picker (customizable number picker)</string>
 </resources>
