--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -452,4 +452,5 @@
     <string name="espresso_title">Espresso (tester helper)</string>
     <string name="gson_title">Gson (JSON parser)</string>
     <string name="leak_canary_title">Leak Canary (detektering af pladsmangel)</string>
+    <string name="number_picker_title">Number Picker (customizable number picker)</string>
 </resources>
