--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -453,4 +453,5 @@
     <string name="espresso_title">Espresso (assistant de test)</string>
     <string name="gson_title">Gson (parser JSON)</string>
     <string name="leak_canary_title">Leak Canary (détecteur de fuite de mémoire)</string>
+    <string name="number_picker_title">Number Picker (customizable number picker)</string>
 </resources>
