--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -473,4 +473,5 @@
     <string name="espresso_title">Espresso (помощник по тестированию)</string>
     <string name="gson_title">Gson (парсер JSON)</string>
     <string name="leak_canary_title">Leak Canary (детектор утечек памяти)</string>
+    <string name="number_picker_title">Number Picker (customizable number picker)</string>
 </resources>
