--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -453,4 +453,5 @@
     <string name="espresso_title">Espresso (test yardımcısı)</string>
     <string name="gson_title">Gson (JSON ayrıştırıcısıser)</string>
     <string name="leak_canary_title">Leak Canary (bellek sızıntısı dedektörü)</string>
+    <string name="number_picker_title">Number Picker (customizable number picker)</string>
 </resources>
