--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -137,8 +137,8 @@
     <string name="background_color">Цвет фона</string>
     <string name="text_color">Цвет текста</string>
     <string name="primary_color">Основной цвет</string>
-    <string name="foreground_color">Foreground color</string>
-    <string name="app_icon_color">App icon color</string>
+    <string name="foreground_color">Цвет переднего плана</string>
+    <string name="app_icon_color">Цвет значка приложения</string>
     <string name="restore_defaults">Сбросить к стандартным</string>
     <string name="theme">Тема</string>
     <string name="changing_color_description">Изменение цвета повлечёт переключение на пользовательскую тему.</string>
@@ -268,21 +268,24 @@
 
     <!-- For example: I will be there in 5 minutes -->
     <plurals name="in_seconds">
-        <item quantity="one">%d second</item>
-        <item quantity="other">%d seconds</item>
+        <item quantity="one">%d секунду</item>
+        <item quantity="few">%d секунды</item>
+        <item quantity="other">%d секунд</item>
     </plurals>
     <plurals name="in_minutes">
-        <item quantity="one">%d minute</item>
-        <item quantity="other">%d minutes</item>
+        <item quantity="one">%d минуту</item>
+        <item quantity="few">%d минуты</item>
+        <item quantity="other">%d минут</item>
     </plurals>
     <plurals name="in_hours">
-        <item quantity="one">%d hour</item>
-        <item quantity="other">%d hours</item>
+        <item quantity="one">%d час</item>
+        <item quantity="few">%d часа</item>
+        <item quantity="other">%d часов</item>
     </plurals>
 
     <!-- For example: Event reminder: 3 minutes before -->
     <plurals name="minutes_before">
-        <item quantity="one">%d минута до события</item>
+        <item quantity="one">%d минуту до события</item>
         <item quantity="few">%d минуты до события</item>
         <item quantity="many">%d минут до события</item>
         <item quantity="other">%d минут(-ы) до события</item>
@@ -302,7 +305,7 @@
 
     <!-- For example: Postpone reminder by 3 minutes -->
     <plurals name="by_minutes">
-        <item quantity="one">%d минута</item>
+        <item quantity="one">%d минуту</item>
         <item quantity="few">%d минуты</item>
         <item quantity="many">%d минут</item>
     </plurals>
@@ -313,13 +316,13 @@
     </plurals>
 
     <!-- For example: Time remaining till the alarm goes off: 6 hours, 5 minutes -->
-    <string name="alarm_goes_off_in">Time remaining till the alarm goes off:\n%s</string>
-    <string name="alarm_warning">Please make sure the alarm works properly before relying on it. It could misbehave due to system restrictions related to battery saving.</string>
-    <string name="reminder_warning">Please make sure the reminders work properly before relying on them. They could misbehave due to system restrictions related to battery saving.</string>
+    <string name="alarm_goes_off_in">Время, оставшееся до срабатывания будильника:\n%s</string>
+    <string name="alarm_warning">Пожалуйста, убедитесь, что будильник работает правильно, прежде чем полагаться на него. Он может не работать должным образом из-за системных ограничений, связанных с экономией батареи.</string>
+    <string name="reminder_warning">Пожалуйста, убедитесь, что напоминания работают правильно, прежде чем полагаться на них. Они могут не работать должным образом из-за системных ограничений, связанных с экономией батареи.</string>
 
     <!-- Alarms -->
     <string name="snooze">Отложить</string>
-    <string name="dismiss">Dismiss</string>
+    <string name="dismiss">Закрыть</string>
     <string name="no_reminder">Без напоминания</string>
     <string name="at_start">С наступлением события</string>
 
@@ -338,7 +341,7 @@
     <string name="password_protect_whole_app">Защита паролем всего приложения</string>
     <string name="keep_last_modified">Сохранять значение даты изменения файла при копировании/перемещении/переименовании</string>
     <string name="show_info_bubble">Показывать информационное окно при прокрутке элементов перетаскиванием полосы прокрутки</string>
-    <string name="prevent_phone_from_sleeping">Prevent phone from sleeping while the app is in foreground</string>
+    <string name="prevent_phone_from_sleeping">Предотвращать засыпание устройства, пока приложение находится на переднем плане</string>
     <string name="skip_delete_confirmation">Всегда пропускать диалог подтверждения удаления</string>
     <string name="enable_pull_to_refresh">Использовать «потяните-для-обновления» в верхней части экрана</string>
     <string name="use_24_hour_time_format">Использовать 24-часовой формат времени</string>
@@ -471,7 +474,7 @@
     <string name="autofittextview_title">AutoFitTextView (масштабирование текста)</string>
     <string name="robolectric_title">Robolectric (фреймворк для тестирования)</string>
     <string name="espresso_title">Espresso (помощник по тестированию)</string>
-    <string name="gson_title">Gson (парсер JSON)</string>
+    <string name="gson_title">Gson (анализатор JSON)</string>
     <string name="leak_canary_title">Leak Canary (детектор утечек памяти)</string>
-    <string name="number_picker_title">Number Picker (customizable number picker)</string>
+    <string name="number_picker_title">Number Picker (настраиваемый ввод чисел)</string>
 </resources>
