--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -326,7 +326,7 @@
     <string name="widgets">Moduler</string>
     <string name="use_same_snooze">Bruk alltid samme intervall for Snooze</string>
     <string name="snooze_time">Intervall for Snooze</string>
-    <string name="vibrate_on_button_press">Vibrate on button press</string>
+    <string name="vibrate_on_button_press">Vibrer ved trykk på knapper</string>
 
     <!-- Setting sections -->
     <string name="visibility">Synlighet</string>
